<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeLayout_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetailsActivity">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="9dp"
        android:background="#E91E63"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:fontFamily="sans-serif-black"
                android:text="PocketPal"
                android:textColor="#000000"
                android:textSize="34sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textusername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_weight="1"
                android:text="Username: "
                android:textColor="#FFFFFF"
                android:textColorLink="#000000"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/AccountBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:text="My Account"
                tools:ignore="TouchTargetSizeCheck" />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_contact_supplier"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:src="@drawable/ic_baseline_call_24" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/linearLayout">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="0dp"
                android:baselineAligned="false">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_marginLeft="10dp"
                    android:layout_gravity="center_vertical">

                    <EditText
                        android:id="@+id/edit_item_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="0dp"
                        android:textAppearance="?android:textAppearanceLarge"
                        android:hint="@string/hint_item_name"
                        android:maxLines="1"
                        android:inputType="text" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:text="@string/category_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <EditText
                            android:id="@+id/edit_product_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:ems="5"
                            android:inputType="number" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_gravity="center_vertical">

                        <TextView
                            android:text="@string/category_quantity"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content" />

                        <ImageButton
                            android:id="@+id/button_product_quantity_increment"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="5dp"
                            android:backgroundTint="@color/white"
                            android:padding="0dp"
                            android:src="@drawable/ic_baseline_add_24"
                            android:textColor="@color/black"
                            app:tint="@color/colorPrimary"
                            tools:ignore="TouchTargetSizeCheck" />

                        <EditText
                            android:id="@+id/edit_product_quantity"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:textAlignment="center"
                            android:inputType="number" />

                        <ImageButton
                            android:id="@+id/button_product_quantity_decrement"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_vertical"
                            android:layout_margin="5dp"
                            android:backgroundTint="@color/white"
                            android:padding="0dp"
                            android:src="@drawable/ic_baseline_horizontal_rule_24"
                            android:textColor="@color/black"
                            app:tint="@color/colorPrimary" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <TextView
                android:text="@string/category_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <EditText
                android:id="@+id/edit_product_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="0dp"
                android:layout_marginTop="5dp"
                android:hint="@string/hint_description"
                android:inputType="textMultiLine" />

            <TextView
                android:text="@string/supplier_contact_heading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/category_supplier_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edit_supplier_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="7"
                    android:inputType="phone" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:text="@string/category_supplier_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

                <EditText
                    android:id="@+id/edit_supplier_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</RelativeLayout>